--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -102,7 +102,7 @@
       "github": "GitHub",
       "twitter": "Twitter"
     },
-    "tagline": "Watch your favorite shows and movies for free with no ads ever (っ'ヮ'c)"
+    "tagline": "Watch your favorite shows and movies for free with no ads ever"
   },
   "global": {
     "name": "SamJ Movies",
@@ -172,7 +172,7 @@
         "default": "What would you like to watch this morning?",
         "extra": ["Can't go wrong with Friends"],
         "extra": ["I hear The Expanse is popular"],
-        "extra": ["\"૮₍  ˶•⤙•˶ ₎ა"],
+        "extra": [":)"],
         "extra": ["Viva la SamJ Movies"]
       },
       "night": {
@@ -591,7 +591,7 @@
         },
         "redoSetup": "Redo setup",
         "successStatus": {
-          "description": "All things are in place for you to start watching your favorite media. (๑>◡<๑)",
+          "description": "All things are in place for you to start watching your favorite media.",
           "title": "Everything is set up"
         },
         "unsetStatus": {
