--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -487,9 +487,9 @@
   },
   "support": {
     "title": "Support",
-    "text": "SamJ Movies is designed to be as user-friendly as possible. However, people still have questions and issues. This page is here to help resolve these shortcomings",
+    "text": "bro just figure it out its not that hard",
     "q1": {
-      "body": "Well, you can join the official <0>SamJ Movies discord</0> and ask questions there or you can email the one provided at the bottom of this page.",
+      "body": "idk google it or smth",
       "title": "Where can I get help?"
     },
     "q2": {
