--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -494,7 +494,7 @@
     },
     "q2": {
       "body": "change the source in the settings to a different one or change the language/quality in the settings",
-      "title": "the movies in russsian/its low quality?"
+      "title": "the movies in russsian/its low quality"
     }
   },
   "screens": {
